src/styles/home.css
@font-face {
  font-family: "Alice";
  src: url("../fonts/Filmotype_Alice.ttf");
}
@font-face {
  font-family: "Nemo";
  src: url("../fonts/Filmotype_Nemo.otf");
}

* {
  padding: 0;
  margin: 0;
}

:root {
  --primary-color: #a8450c;
  --title-color: #d5a653;
  --color-white: white;
  --letter-spacing: 1px;
}

body {
  height: 100vh;
  width: 100%;
}

#container {
  width: 100%;
  height: 100vh;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto 1fr auto;
}

.home-hero {
  background-image: url("../images/hero-image.png");
  background-position: bottom;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.bg-color {
  background-color: #17181c;
}
.nav-bar {
  grid-column: 1 /-1;
  padding-top: 5px;
}

.nav-bar-inner {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 95%;
  margin: auto;
}

/* mobile nav */

.mobile-icon {
  display: none;
  cursor: pointer;
}

.mobile-icon div {
  width: 25px;
  height: 3px;
  background-color: var(--primary-color);
  margin: 5px;
}

#logo {
  width: 70px;
}

.items {
  display: flex;
  gap: 50px;
}

.links {
  border: none;
  background-color: transparent;
  color: var(--color-white);
  letter-spacing: var(--letter-spacing);
  cursor: pointer;
  font-family: "Nemo", sans-serif;
  font-size: 22px;
  position: relative;
}

.links::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 2px;
  background-color: var(--primary-color);
  transform: scaleX(0);
  transition: transform 0.3s ease;
}

.links:hover::before {
  transform: scaleX(1);
}

.content {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.content-inner {
  grid-column: 1 / 2;
  grid-row: 2/3;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: baseline;
  grid-gap: 20px;
}

.main-title {
  color: var(--color-white);
  font-size: 90px;
  font-family: "Alice", sans-serif;
}

.para {
  color: var(--color-white);
  font-size: 35px;
  font-family: "Nemo", sans-serif;
  letter-spacing: var(--letter-spacing);
  width: 60%;
}

.menu-btn {
  padding: 10px 20px;
  border: none;
  border-radius: 10px;
  background-color: var(--primary-color);
  color: var(--color-white);
  font-family: "Nemo", sans-serif;
  letter-spacing: var(--letter-spacing);
  font-size: 20px;
  transition: transform 0.3s ease-in;
}

.menu-btn:hover {
  transform: scale(1.2);
}

.content-inner a {
  text-decoration: none;
}

.footer {
  color: var(--color-white);
  grid-column: 1 / -1;
  grid-row: 3/4;
  width: 95%;
  margin: auto;
  display: flex;
  gap: 10px;
}

.footer span {
  color: var(--color-white);
}

.footer a {
  color: var(--primary-color);
}

@media (max-width: 1390px) {
  .main-title {
    font-size: 50px;
  }
  .para {
    width: 80%;
    font-size: 33px;
  }
}

@media (max-width: 900px) {
  .home-hero {
    background-image: url("../images/tab.png");
  }
  .para {
    width: 60%;
  }

  .content-inner {
    margin-left: 10px;
    padding-bottom: 50px;
    grid-column: 1/-1;
  }
}

@media (max-width: 720px) {
  .main-title {
    font-size: 40px;
  }
  .para {
    font-size: 22px;
  }
  .content-inner {
    padding-bottom: 100px;
  }
}
@media (max-width: 520px) {
  .content-inner {
    padding-bottom: 150px;
    align-items: center;
    text-align: center;
  }
  
  .footer {
    justify-content: center;
  }

  body {
    overflow-x: hidden;
  }

  .items {
    position: absolute;
    right: 0px;
    height: 50vh;
    top: 10vh;
    background-color: var(--primary-color);
    display: flex;
    flex-direction: column;
    gap: 80px;
    width: 100%;
    transform: translateX(100%);
    transition: transform 0.5s ease-in;
  }
  .mobile-icon {
    display: block;
  }
  .home-hero {
    background-image: url("../images/mobile.png");
  }
}

.active {
  transform: translateX(0%);
  padding-top: 40px;
}

.toggle .bar-one {
  transform: rotate(-45deg) translate(-5px, 6px);
}
.toggle .bar-two {
  opacity: 0;
}
.toggle .bar-three {
  transform: rotate(45deg) translate(-5px, -6px);
}

